# mlflow-docker-simple

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run_postgresql.ps1  run_postgresql.sh  run_sqlite.ps1  run_sqlite.sh  train.py
mlflow_data/: mlflow.db
mlflow_server/: Dockerfile
