[project]
name = "mlflow-docker-simple"
version = "0.1.0"
description = ""
authors = [
    {name = "kirin",email = "kirin.chen1001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow (>=3.9.0,<4.0.0)",
    "pandas (<3.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "google"
url = "https://pypi.org/simple" # Google Cloud CDN, 通常很快且穩定
priority = "primary"